[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/outros/Pacifico-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/start_screen.gd" type="Script" id=2]
[ext_resource path="res://assets/Background layers/Background.png" type="Texture" id=3]
[ext_resource path="res://scripts/recorde.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=15]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=16]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=17]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.529412, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=6]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_focus = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = SubResource( 2 )
Button/styles/hover = SubResource( 3 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=14]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_focus = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = SubResource( 11 )
Button/styles/normal = SubResource( 12 )
Button/styles/pressed = SubResource( 13 )

[node name="start_screen" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -280 )
scale = Vector2( 1.11, 1.11 )
texture = ExtResource( 3 )
centered = false

[node name="créditos" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -125.0
margin_right = 223.0
custom_fonts/font = SubResource( 15 )
text = "CRÉDITOS:
Leonardo Gachet | Game designer
Pixel Frog | Sprites
"

[node name="text_recorde" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -109.0
margin_right = 109.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 16 )
text = "Recorde:"
align = 1

[node name="recorde" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -109.0
margin_top = 50.0
margin_right = 109.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 17 )
text = "000000"
align = 1
script = ExtResource( 4 )

[node name="controls" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.0
margin_top = -98.5
margin_right = 104.0
margin_bottom = 98.5

[node name="startBTN" type="Button" parent="controls"]
margin_right = 208.0
margin_bottom = 57.0
focus_neighbour_top = NodePath("../quitBTN")
theme = SubResource( 6 )
custom_colors/font_color_focus = Color( 0.933333, 0.835294, 0.0470588, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.933333, 0.835294, 0.0470588, 1 )
custom_colors/font_color_pressed = Color( 1, 0.521569, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "INICIAR"

[node name="quitBTN" type="Button" parent="controls"]
margin_top = 61.0
margin_right = 208.0
margin_bottom = 118.0
focus_neighbour_bottom = NodePath("../startBTN")
theme = SubResource( 14 )
custom_colors/font_color_focus = Color( 0.933333, 0.835294, 0.0470588, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.933333, 0.835294, 0.0470588, 1 )
custom_colors/font_color_pressed = Color( 1, 0.521569, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "SAIR"

[connection signal="pressed" from="controls/startBTN" to="." method="_on_startBTN_pressed"]
[connection signal="pressed" from="controls/quitBTN" to="." method="_on_quitBTN_pressed"]
